--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "axios": "^1.4.0",
     "backend": "file:",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
@@ -45,8 +48,11 @@
     "mime": "^1.6.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mongoose": "8.7.1",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
+    "node-cron": "^2.0.3",
+    "node-fetch": "^2.6.1",
     "object-inspect": "^1.13.2",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
@@ -69,10 +75,13 @@
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2"
   },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": " nodemon server.js"
   },
   "keywords": [],
   "author": "",
