--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,23 @@
-# Utiliza una imagen base de Node.js
+# Use the official Node.js image as a base image
 FROM node:18
 
-RUN mkdir -p /usr/src/app
-
+# Create and change to the app directory
 WORKDIR /usr/src/app
 
+# Copy package.json and package-lock.json
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
-#RUN npm install -g nodemon
 
+# Rebuild native modules
+RUN npm rebuild bcrypt --build-from-source
+
+# Copy the rest of the application code
 COPY . .
 
+# Expose the port the app runs on
 EXPOSE 3000
 
+# Start the application
 CMD ["npm", "run", "dev"]
