--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
-    "axios": "^1.4.0",
+    "axios": "^1.7.7",
     "backend": "file:",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -17,6 +17,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
@@ -57,6 +58,7 @@
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.10",
+    "pdfkit": "^0.15.0",
     "proxy-addr": "^2.0.7",
     "qs": "^6.13.0",
     "range-parser": "^1.2.1",
